@startuml
hide circle

entity users {
  * id [PK] : Integer ID
  --
  * name : string ユーザー名
  * email : string メールアドレス
  * password : string パスワード
  * role_id [FK] : integer ロールID
}

entity tasks {
  * id [PK] : Integer ID
  --
  * title : string タイトル
  detail : text  詳細
  * limit_on : date 期限
  * user_id [FK] : integer ユーザーID
  * status_id [FK] : integer ステータスID
}

entity statuses {
  * id [PK] : integer : id
  --
  * name : string : ステータス名
}

entity roles {
  * id [PK] : integer ID
  --
  * name : string ロール名
}

users ||--|{ tasks
users ||--|| roles
tasks ||--|| statuses
@enduml
